--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title>Micmic</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -35,29 +35,29 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
                     <a href="#">
-                        Start Bootstrap
+                        Micmic
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Hola!</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="#">Educación</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">Proyectos</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
+                    <a href="#">Miau</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="#">Guau</a>
                 </li>
                 <li>
-                    <a href="#">Services</a>
+                    <a href="#">Pyon</a>
                 </li>
                 <li>
-                    <a href="#">Contact</a>
+                    <a href="#">Contacto</a>
                 </li>
             </ul>
         </div>
